# ESP-Vario

./: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults
main/: CMakeLists.txt  Kconfig.projbuild  adc.c  adc.h  config.h  idf_component.yml  imu.c  imu.h  kalmanfilter4.c  kalmanfilter4.h  kalmanfilter4d.c  kalmanfilter4d.h  leds.c  leds.h  main.c  misc_utils.h  mpu6050.c  mpu6050.h  nvd.c  nvd.h  ringbuf.c  ringbuf.h  state.c  state.h  task_ble_server.c  task_ble_server.h  task_buzzer.c  task_buzzer.h  task_ota.c  task_ota.h  task_user_inputs.c  task_user_inputs.h  task_vario.c  task_vario.h  ui.c  ui.h  vario_audio.c  vario_audio.h  wifi.c  wifi.h
